src/test/deca/context/valid/exactCmp-class.deca
class A{

}
{
    Object o = null;
    A a = new A();
    A b = null;
    o != a;
    a == a;
    o != o;
}
