src/test/deca/context/invalid/fieldSameAsMethod.deca
class A{
	int a;
	void a(){}
}
